# hamt-snn

./: .gitignore  BENCHMARK_REPORT.txt  LICENSE  README.md  pyproject.toml  requirements.txt
demo/: hamt_demo.py
experiments/: analyze_results.py  run_ablation.py  run_activity_decay_full.py  run_bioplausible.py  run_dvs_gesture_local.py  run_emnist_default_gpu.py  run_mnist_comparison.py  run_neuromorphic_local.py  run_overnight_gpu.py  run_persistent_vs_original.py  run_rapid_ideas.py  run_rapid_ideas_2.py  run_sweep.py  sweep_configs.json
hamt/: __init__.py  habituation.py  lava_compat.py  loss.py  metrics.py  norse_compat.py  wrapper.py
kaggle/: hamt_activity_decay_v3.py  hamt_benchmark_v1_AGGRESSIVE_DO_NOT_USE.py  hamt_benchmark_v2.py  hamt_long_training_v3.py  hamt_neuromorphic_v3.py  hamt_shd_v3.py  hamt_synaptic_depression_v3.py
research/: CROSS_SAMPLE_HABITUATION.md  RESEARCH_PLAN.md  biological_mechanisms.md
src/habituation/: habituation_module.py  persistent_habituation.py
src/losses/: metabolic_loss.py
src/models/: baseline_snn.py  hamt_snn.py
src/training/: trainer.py
src/utils/: data.py  efficiency_metrics.py  metrics.py
